# xgread

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ZLIBArchive.pas  pyproject.toml  xg_format.pas
.github/workflows/: ci.yml
examples/: analyze_xg.py
tests/: test_read.py
xgread/: __init__.py  _archive.py  _identity.py  _notation.py  _parser.py  _xgid.py  models.py
